--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "create-react-app-jon",
+  "name": "tesla-stock-analysis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.10.1",
+    "styled-components": "^6.1.1",
+    "tesla-stock-analysis": "file:",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
